feat: search applications and batch grants
